# cppMailfs

./: .gitignore  CMakeLists.txt
android/: README.md  build.gradle  settings.gradle
android/demo-app/: build.gradle
android/demo-app/src/main/: AndroidManifest.xml
android/demo-app/src/main/java/com/mailfs/demo/: MailfsHttpServerService.java  MainActivity.java
android/demo-app/src/main/res/drawable/: ic_mailfs_service.xml
android/mailfs-aar/: build.gradle
android/mailfs-aar/src/main/cpp/: CMakeLists.txt  mailfs_jni.cpp
android/mailfs-aar/src/main/java/com/mailfs/android/: MailfsHttpServer.java  MailfsNative.java
config/: mailfs.example.json
include/mailfs/application/: http_imap_download_server.hpp  mailfs_service.hpp
include/mailfs/application/ports/: cache_repository.hpp  mail_transport.hpp
include/mailfs/core/: hash.hpp
include/mailfs/core/mime/: mime_message.hpp
include/mailfs/core/model/: app_config.hpp  cache_models.hpp  mail_block_metadata.hpp
include/mailfs/core/security/: xor_codec.hpp
include/mailfs/infra/config/: json_config_loader.hpp
include/mailfs/infra/imap/: imap_client.hpp  imap_response_parser.hpp  imap_utf7.hpp
include/mailfs/infra/logging/: logger.hpp
include/mailfs/infra/net/: platform.hpp  secure_socket.hpp
include/mailfs/infra/platform/: utf8.hpp
include/mailfs/infra/storage/: sqlite_cache_repository.hpp
reports/: test-report-2026-04-01.md
src/app/cli/: main.cpp
src/application/: http_imap_download_server.cpp  mailfs_service.cpp
src/core/: app_config.cpp  hash.cpp  mail_block_metadata.cpp  mime_message.cpp  xor_codec.cpp
src/infra/config/: json_config_loader.cpp
src/infra/imap/: imap_client.cpp  imap_response_parser.cpp  imap_utf7.cpp
src/infra/logging/: android_logger.cpp  logger.cpp
src/infra/net/: secure_socket.cpp
src/infra/platform/: utf8.cpp
src/infra/storage/: sqlite_cache_repository.cpp
tests/: config_loader_test.cpp  http_imap_download_server_test.cpp  imap_response_parser_test.cpp  imap_utf7_test.cpp  logger_test.cpp  mail_block_metadata_test.cpp  mailfs_service_test.cpp  mime_message_test.cpp  sqlite_cache_repository_test.cpp  utf8_test.cpp
tools/: build_nmake.bat  imap_test_server.py  run_e2e_test.py  run_full_verification.py
tools/test-certs/: server.crt  server.key
